--- a/App/Podfile
+++ b/App/Podfile
@@ -4,6 +4,7 @@ platform :ios, '15.0'
 target 'mvvm-example-memo' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
+  inhibit_all_warnings!
 
   # Pods for mvvm-example-memo
   inherit! :search_paths
