プロジェクト名をMemoに変更

--- a/App/Podfile
+++ b/App/Podfile
@@ -1,12 +1,12 @@
 # Uncomment the next line to define a global platform for your project
 platform :ios, '15.0'
 
-target 'mvvm-example-memo' do
+target 'Memo' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
   inhibit_all_warnings!
 
-  # Pods for mvvm-example-memo
+  # Pods for Memo
   inherit! :search_paths
   pod 'RealmSwift'
   pod 'Reusable'
